<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>corner_detection</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="eric@todo.todo">eric</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <!-- <depend>nav_msgs</depend> -->
  <depend>std_msgs</depend>
  <!-- <depend>geometry_msgs</depend> -->
  <!-- <depend>message_filters</depend> -->
  <depend>sensor_msgs</depend>
  <!-- <depend>std_srvs</depend> -->
  <!-- <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>launch_ros</depend>
  <depend>launch_testing</depend> -->
  <!-- <depend>pluginlib</depend> -->
  <!-- <depend>filters</depend>
  <depend>laser_filters</depend> -->
  <!-- <depend>laser_geometry</depend> -->
  <depend>OpenCV</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- <build_depend>filters</build_depend>
  <run_depend>filters</run_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <filters plugin="interpolation_filter.xml" /> -->
  </export>
</package>
